Intro almost completed.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "bespoke": "^1.0.0",
     "bespoke-bullets": "^1.0.0",
+    "bespoke-classes": "^1.0.0",
     "bespoke-hash": "^1.0.0",
     "bespoke-keys": "^1.0.0",
     "bespoke-progress": "^1.0.0",
