--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "presentation-graft-full-stack-microservices",
   "version": "0.0.0",
   "dependencies": {
-    "prism": "gh-pages"
+    "prism": "gh-pages",
+    "font-awesome": "~4.2.0"
   }
 }
