--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "prism": "gh-pages",
-    "font-awesome": "~4.2.0"
+    "font-awesome": "~4.2.0",
+    "fira": "mozilla/Fira"
   }
 }
