Adding bespoke-run missing dependency

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bespoke-hash": "^1.0.0",
     "bespoke-keys": "^1.0.0",
     "bespoke-progress": "^1.0.0",
+    "bespoke-run": "^1.0.1",
     "bespoke-scale": "^1.0.0",
     "bespoke-state": "^1.0.0",
     "bespoke-theme-cube": "^1.0.0",
